--- a/references.bib
+++ b/references.bib
@@ -818,4 +818,54 @@
   pages      = {xii+544},
 }
 
+@Article{Zalesski2018,
+  author     = {Zalesski, A. E.},
+  journal    = {J. Algebra},
+  title      = {Invariants of maximal tori and unipotent constituents of some quasi-projective characters for finite classical groups},
+  year       = {2018},
+  issn       = {0021-8693,1090-266X},
+  pages      = {517--541},
+  volume     = {500},
+  doi        = {10.1016/j.jalgebra.2017.06.003},
+  fjournal   = {Journal of Algebra},
+  mrclass    = {20G40 (20C33)},
+  mrnumber   = {3765467},
+  mrreviewer = {Marco\ Antonio\ Pellegrini},
+  url        = {https://doi.org/10.1016/j.jalgebra.2017.06.003},
+}
+
+@Article{KonvalinkaMatjavPfeiffer2011,
+  author     = {Konvalinka, Matja\v z{} and Pfeiffer, G\"otz and R\"over, Claas E.},
+  journal    = {J. Group Theory},
+  title      = {A note on element centralizers in finite {C}oxeter groups},
+  year       = {2011},
+  issn       = {1433-5883,1435-4446},
+  number     = {5},
+  pages      = {727--745},
+  volume     = {14},
+  doi        = {10.1515/JGT.2010.074},
+  fjournal   = {Journal of Group Theory},
+  mrclass    = {20F55 (20E45)},
+  mrnumber   = {2831968},
+  mrreviewer = {Koji\ Nuida},
+  url        = {https://doi.org/10.1515/JGT.2010.074},
+}
+
+@Article{ThiemVinroot2009,
+  author     = {Thiem, Nathaniel and Vinroot, C. Ryan},
+  journal    = {Electron. J. Combin.},
+  title      = {Gelfand-{G}raev characters of the finite unitary groups},
+  year       = {2009},
+  issn       = {1077-8926},
+  number     = {1},
+  pages      = {Research Paper 146, 37},
+  volume     = {16},
+  doi        = {10.37236/235},
+  fjournal   = {Electronic Journal of Combinatorics},
+  mrclass    = {20C33 (05E05 20G40)},
+  mrnumber   = {2577314},
+  mrreviewer = {Frank\ Himstedt},
+  url        = {https://doi.org/10.37236/235},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
